fix featured overflow

--- a/src/components/Featured.module.css
+++ b/src/components/Featured.module.css
@@ -51,7 +51,7 @@
 }
 
 .featured__teaser {
-  @apply mb-4 max-h-96 overflow-y-hidden break-words whitespace-normal;
+  @apply mb-4 max-h-96 break-words whitespace-normal;
 }
 
 .featured__excerpt {
